[package]
name = "ruscord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1.0.104"
serde = { version = "1.0.183", features = ["derive"] }
ed25519-dalek = "2.0.0"
hyper = { version = "0.14.13", features = ["full"] }